# LivrariaNovo-main

./: .env  .gitignore  db.sqlite3  pyproject.toml  requirements.txt
core/: admin.py  models.py  serializers.py  views.py
core/migrations/: 0001_initial.py  0002_editora.py  0002_remove_livro_autores_remove_livro_categoria_and_more.py  0003_alter_autor_email.py  0003_autor_livro.py  0004_alter_editora_site.py  0005_alter_usuario_cpf.py  0006_livro_autores_livro_categoria_livro_editora_and_more.py  0007_alter_livro_isbn.py
core/models/: editora.py  livro.py  usuario.py
core/serializers/: livro.py
livraria/: settings.py
media/migrations/: 0001_initial.py
