[tool.poetry]
name = "livrarianovo-main"
version = "0.1.0"
description = ""
authors = ["Gabriel Quadros <gquadros312@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.2"
django-environ = "^0.9.0"
django-rest-framework = "^0.1.0"
djando = "^0.2"
drf-spectacular = "^0.24.2"
djangorestframework-simplejwt = "^5.2.1"
python-magic = "^0.4.27"
Pillow = "^9.2.0"
django-cors-headers = "^3.13.0"
whitenoise = "^6.2.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
